fixed the background color gap in the Skills section

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ img {
 
 /* ! PROJECTS */
 #projects {
-    margin-bottom: 20px;
+    margin-bottom: -33px;
     border-bottom: 3px solid #960a08;
 }
 
